--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         title('Cubic Regression')
 
         end
+        Kettes:
+        x=[-4,-3,-2,-1,0,1,2,3,4];
+        y=[0,0,0,2.3,4,2.3,0,0,0];
+        z=-4:0.5:4;
+        d=interp1(x,y,z);
+        plot(x,y,'o',z,d,':.')
+        value=d(17);
+
     </strong>
     </div>
     <div>
