--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         d=interp1(x,y,z);
         plot(x,y,'o',z,d,':.')
         value=d(17);
+        Hármas:
+        x=[0.5,1,1.5,2,2.5,3];
+        y=[11.3137,16,22.6274,32,45.2548,64];
+        p=polyfit(x,y,8);
+        k=polyder(p);
 
     </strong>
     </div>
