--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
         y=[11.3137,16,22.6274,32,45.2548,64];
         p=polyfit(x,y,8);
         k=polyder(p);
-
+        Hármas
+        x=[0.5,1,1.5,2,2.5,3];
+        y=[11.3137,16,22.6274,32,45.2548,64];
+        p=polyfit(x,y,8);
+        k=polyder(p);
+        itt mondjuk nem tom mi van
     </strong>
     </div>
     <div>
