--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         y=[11.3137,16,22.6274,32,45.2548,64];
         p=polyfit(x,y,8);
         k=polyder(p);
-        itt mondjuk nem tom mi van
+        itt mondjuk nem tom mi van1
+        Plusz 1:
+        A numanal laborom szarabb mint a tietek.
     </strong>
     </div>
     <div>
